projects spacing fix and nav bar styles fix

--- a/css/TerminalStyles.css
+++ b/css/TerminalStyles.css
@@ -1,6 +1,5 @@
 #FakeTerminal {
     margin: 0 auto; 
-    margin-top: 70px;
     border-radius: 10px;
     max-width: 800px;
     width: 90%;
